# osso-abook

./: .gitignore  AUTHORS  Makefile.am  configure.ac  uncrustify.sh
debian/: changelog  control  libosso-abook-dev.install  libosso-abook-doc.install  libosso-abook.install  rules
doc/: Makefile.am  libosso-abook-docs.sgml  libosso-abook-sections.txt  libosso-abook.types
lib/: Makefile.am  avatar.c  avatar.h  eds.c  eds.h  osso-abook-account-manager.c  osso-abook-account-manager.h  osso-abook-address-format.c  osso-abook-address-format.h  osso-abook-aggregator.c  osso-abook-aggregator.h  osso-abook-all-group.c  osso-abook-all-group.h  osso-abook-alpha-shortcuts.c  osso-abook-alpha-shortcuts.h  osso-abook-avatar-cache.c  osso-abook-avatar-cache.h  osso-abook-avatar-chooser-dialog.c  osso-abook-avatar-chooser-dialog.h  osso-abook-avatar-editor-dialog.c  osso-abook-avatar-editor-dialog.h  osso-abook-avatar-editor.c  osso-abook-avatar-editor.h  osso-abook-avatar-image.c  osso-abook-avatar-image.h  osso-abook-avatar.c  osso-abook-avatar.h  osso-abook-button.c  osso-abook-button.h  osso-abook-caps.c  osso-abook-caps.h  osso-abook-contact-chooser.c  osso-abook-contact-chooser.h  osso-abook-contact-detail-selector.c  osso-abook-contact-detail-selector.h  osso-abook-contact-detail-store.c  osso-abook-contact-detail-store.h  osso-abook-contact-editor.c  osso-abook-contact-editor.h  osso-abook-contact-field-selector.c  (+116 more)
pkgconfig/: Makefile.am  libosso-abook-1.0.pc.in
schema/: libosso-abook.schemas
